--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,8 @@ body, html {
 }
 
 
+
+
 .privacy-banner-wrapper {
   margin-top: 10px;
   padding: 0 15px;
@@ -82,7 +84,7 @@ height: 500px; }
   width: 100%;
   height: 280px;
   object-fit: cover; /* ensures image fills space without distortion */
-  border-radius: 5px;
+  border-radius: 0;
   cursor: pointer;
 }
 
@@ -108,7 +110,7 @@ height: 500px; }
 .lightbox-content {
   max-width: auto;
   max-height: auto;
-  border-radius: 5px;
+
 }
 
 .lightbox-close,
@@ -733,6 +735,7 @@ header h1 {
     overflow: hidden;
     border-radius: 8px;
     display: block;
+  
 }
 
 
@@ -829,7 +832,7 @@ header h1 {
   width: 120px;
   height: 120px;
   object-fit: cover;
-  border-radius: 5px;
+ border-radius: 0;
  
   cursor: pointer;
   
@@ -883,7 +886,7 @@ header h1 {
 .lightbox-next:hover {
   color:#ffffff;
   background: rgba(0, 0, 0, 0.6);
-  border-radius: 5px;
+ 
 }
 
 .lightbox-prev { left: 20px; }
@@ -1207,6 +1210,7 @@ gap: 10px;
 .banner-content img {
 width: 1000px;
 
+
 }
 
 .banner-logo {
@@ -1272,6 +1276,8 @@ margin-bottom: 80px;
 .banner-slide.active {
   opacity: 1;
   z-index: 0;
+ 
+  
 
   
 
@@ -1286,7 +1292,7 @@ margin-bottom: 80px;
   justify-content: center;
   background: rgba(0, 0, 0, 0.5); 
   padding: 10px;
-
+  
   max-height: 380px;
   max-width: 100vw;
   margin: auto;
@@ -1593,6 +1599,8 @@ margin-bottom: 30px;
 
 .button-bottom:hover {
   opacity: 0.8;
+  
+
 }
 
 .button-bottom {
@@ -1607,7 +1615,11 @@ margin-bottom: 30px;
   font-weight: bold;
   cursor: pointer;
   text-align: center;
+  
 }
+
+
+
 
 
 
@@ -1707,6 +1719,9 @@ margin-bottom: 30px;
 .lightbox-next {
   right: 20px;
 }
+
+
+
 
 
 * {
