--- a/styles/style.css
+++ b/styles/style.css
@@ -1721,7 +1721,47 @@ margin-bottom: 30px;
 }
 
 
+.cookie-banner {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #111;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    font-size: 15px;
+    z-index: 1000;
+    box-shadow: 0 -2px 5px rgba(0,0,0,0.2);
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+  }
 
+  .cookie-banner a {
+    color: #ee6001;
+    text-decoration: underline;
+  }
+
+  .cookie-banner button {
+    margin-left: 15px;
+    background-color: #ee6001; ;
+    color: #000;
+    border: none;
+    padding: 8px 16px;
+    font-weight: bold;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .cookie-banner button:hover {
+    opacity: 0.8;
+  }
+
+  @keyframes fadeIn {
+    to {
+      opacity: 1;
+    }
+  }
 
 
 * {
