--- a/styles/style.css
+++ b/styles/style.css
@@ -27,16 +27,20 @@ body, html {
 
 
 
-.privacy-banner-wrapper {
-  margin-top: 10px;
-  padding: 0 15px;
 
-}
 
 
 
 .privacy-banner {
-height: 500px; }
+margin-top: -4px;
+height: 500px;
+ width: 100%;
+  max-height:500px;
+  object-fit: cover;
+
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  display: block;
+  }
 
 @media (max-width:498px) {
   .privacy-banner{
@@ -49,12 +53,12 @@ height: 500px; }
 
 .privacy-banner {
   width: 100%;
-  max-height:470px;
+  max-height:500px;
   object-fit: cover;
-  border-radius: 6px;
+
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   display: block;
-  margin: 0 auto;
+ 
 }
 
 .infinite-carousel {
