--- a/styles/style.css
+++ b/styles/style.css
@@ -13,20 +13,13 @@ body, html {
     scroll-behavior: smooth;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0;
+
+
+
+.privacy-heading {
+  text-align: center;
+  margin-top: 10px;
 }
-
-
-
-
 
 
 
@@ -1501,43 +1494,42 @@ display: flex;
 flex-wrap: wrap; 
 justify-content: center; 
 gap: 10px; 
-max-width: 900px; 
+max-width: 95%; 
 margin: 0 auto; 
-grid-template-columns: repeat(1, 1fr); 
+grid-template-columns: repeat(3, 1fr); 
 
 }
 
 
+
+.bullet-box {
+  width: 30%;
+  height: 330px;
+  display: flex;
+
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.05);
+  padding: 10px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  box-sizing: border-box;
+  /* min-width removed */
+}
 
 @media (max-width: 900px) {
-.bullet-box {
-    width: 45%; 
-}
-}
-
-@media (max-width: 600px) {
-.bullet-box {
-    width:100%;
-}
+  .bullet-box {
+    width: calc(100% - 30px);
+    height: auto;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 10px;
+  }
 }
 
-
-.bullet-box {
-width: 30%;
-min-width: 255px; 
-height: 260px; 
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-text-align: center;
-border: 1px solid #ddd;
-border-radius: 10px;
-background: rgba(0, 0, 0, 0.05);
-padding: 15px;
-transition: background-color 0.3s ease, color 0.3s ease;
-
-}
 
 .bullet-box:hover img {
   filter: brightness(0) invert(1); 
