--- a/styles/style.css
+++ b/styles/style.css
@@ -16,37 +16,66 @@ body, html {
 
 
 
-.privacy-heading {
-  text-align: center;
-  margin-top: 10px;
+
+
+
+.service-banner-privacy {
+  position: relative;
+  width: 100%;
+  top: 0;
+  left: 0;
+  height: 470px; 
+  background: url(../images/privacy-banner.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  font-size: 60px;
+  margin-top: -3px;
 }
 
+/* Optional dark overlay */
+.banner-overlay-privacy {
+  position: absolute;
+  top: 20%;
+  left: 0;
+  height: 50%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.485);
+}
 
+/* Flexbox centering */
+.banner-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  position: relative;
+}
 
-
-.privacy-banner {
-margin-top: -4px;
-height: 500px;
- }
-
-@media (max-width:498px) {
-  .privacy-banner{
-   height: 270px;
-    
+.banner-content h1 {
+  color: #fff;
+  font-size: 60px;
+  margin: 0;
+}
+@media (max-width: 768px) {
+  .banner-content h1 {
+    font-size: 40px;
+    padding: 0 15px;
+    text-align: center;
   }
 }
 
 
 
-.privacy-banner {
-  width: 100%;
-  max-height:500px;
-  object-fit: cover;
 
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  display: block;
- 
-}
+
+
+
+
+
+
 
 .infinite-carousel {
   overflow: hidden;
@@ -257,7 +286,7 @@ height: 500px;
   margin-top: 4px;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 5px;
+  
  
  
 }
@@ -271,7 +300,7 @@ height: 500px;
   margin-top: 4px;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 5px;
+ 
 }
 
 .service-banner-kitchens {
@@ -283,7 +312,7 @@ height: 500px;
   margin-top: 4px;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 5px;
+ 
 }
 
 .service-banner-brickwork {
@@ -295,7 +324,7 @@ height: 500px;
   margin-top: 4px;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 5px;
+ 
 }
 
 .service-banner-blockpaving{
@@ -307,7 +336,7 @@ height: 500px;
   margin-top: 4px;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 5px;
+  
 }
 
 .service-banner-landscaping{
@@ -319,7 +348,7 @@ height: 500px;
   margin-top: 4px;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 5px;
+
 }
 
 .service-banner-decorating {
@@ -331,7 +360,7 @@ height: 500px;
   margin-top: 4px;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 5px;
+  
 }
 
 .service-banner-extension {
@@ -343,7 +372,7 @@ height: 500px;
   margin-top: 4px;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 5px;
+ 
 }
 
 .service-banner-services {
@@ -356,25 +385,26 @@ height: 500px;
   background-repeat: no-repeat;
   background-position: center;
   text-align: center;
-  border-radius: 5px;
+ 
 
 }
 
 .banner-overlay-services {
-  position: absolute;
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5); 
+  padding: 10px;
+  color: white;
+  max-height: 380px;
+  max-width: 100vw;
+  margin: auto;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(27, 24, 23, 0.6); 
-  color: #fff;
-  padding: 50px 150px;
-  font-size: 25px;
-  font-weight: bold;
+  transform: translateY(-50%);
   text-align: center;
-  border-radius: 5px;
-  z-index: 5;
-  width: 90%;
-  max-width: 1200px;
   
  
   }
@@ -408,11 +438,15 @@ height: 500px;
 
 
 
-  @media (max-width: 600px) {
+  @media (max-width: 900px) {
     .banner-overlay-services {
       font-size: 18px;
       padding: 10px 15px;
     }
+
+ 
+
+    
   }
   
   @media (max-width: 400px) {
@@ -940,6 +974,7 @@ header h1 {
   margin-left:-60px;
   white-space: nowrap;  
   margin-bottom:40px;
+  position: relative;
  
 }
 
@@ -954,6 +989,7 @@ header h1 {
   margin-left:-60px;
   white-space: nowrap;
  margin-bottom: 40px;
+ position: relative;
 }
 
 
